--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+  <!-- META TAGS -->
+
   <!-- Title -->
   <title>Sub Hunter</title>
 
@@ -11,19 +13,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 
-
   <!-- Android -->
   <meta name="theme-color" content="red">
 
   <!-- iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- If content is set to yes, the web application runs in full-screen mode hiding Safari User Interface Components -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- Sets the style of the status bar for a web application. Can be "default", "black" or "black-translucent" -->
-  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- Disables automatic detection of possible phone numbers in a webpage in Safari on iOS -->
-  <meta name="apple-mobile-web-app-title" content="Sub Hunter">
+  <meta name="format-detection" content="telephone=no">
   <!-- Specify a web application title for the launch icon. By default, the <title> tag is used -->
+  <meta name="apple-mobile-web-app-title" content="Sub Hunter">
 
 
   <!-- LINK TAGS -->
@@ -47,8 +48,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="Assets/icon/apple-icon-180x180.png">
 
   <!-- Startup Image -->
-  <link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
   <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
+  <link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
 
   <!-- Manifest.json -->
   <link rel="manifest" href="manifest.json">
