--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             class="project_box"
             href="http://wesfar.github.io/Projects/20161009-1 - 2 Naves Controladas 3 Teclas - Tiros Collision Detection Score/index.html" 
             target="_blank">
-            Space Dogfight<br>-</br>2 Spacships Clash In Space<br>-</br>(2016-10)
+            Space Dogfight<br>-</br>2 Spaceships Clash In Space<br>-</br>(2016-10)
             </a>
 
             <a 
@@ -222,17 +222,21 @@
         </div>
       </div>
     </div>
+
     <div id="contact" class="contact">
       <h1>Contact</h1>
       <a href="mailto:jose.goncalves.pt@gmail.com">jose.goncalves.pt@gmail.com</a>
       <br></br><br></br>
     </div>
+
     <div id="about" class="about">
       <h1>About</h1>
       <p>Some text About this site<a>
       <br></br><br></br>      
     </div>
+
     <div id="empty" class="empty"></div>
+
   </div>
 
  <script src="script.js"></script>
