--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -3,132 +3,148 @@
 
 <head>
 
-<!-- META TAGS -->
+  <!-- META TAGS -->
 
-<!-- Title -->
-<title>Air Strike</title>
+  <!-- Title -->
+  <title>Air Strike</title>
 
-<!-- Must -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">  
-<!--
-<meta name="description" content="Air Strike Game">
-<meta name="keywords" content="Air Strike Keywords">
--->
+  <!-- Must -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+  <!--
+  <meta name="description" content="Air Strike Game">
+  <meta name="keywords" content="Air Strike Keywords">
+  -->
 
-<!-- Android -->
-<meta name="theme-color" content="red">
-<!--
-<meta name="mobile-web-app-capable" content="yes">
--->
+  <!-- Android -->
+  <meta name="theme-color" content="red">
+  <!--
+  <meta name="mobile-web-app-capable" content="yes">
+  -->
 
-<!-- iOS -->
-<meta name="apple-mobile-web-app-capable" content="yes">                        <!-- If content is set to yes, the web application runs in full-screen mode hiding Safari User Interface Components -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black">             <!-- Sets the style of the status bar for a web application. Can be "default", "black" or "black-translucent" -->
-<meta name="format-detection" content="telephone=no">                           <!-- Disables automatic detection of possible phone numbers in a webpage in Safari on iOS -->
-<meta name="apple-mobile-web-app-title" content="Air Strike">                   <!-- Specify a web application title for the launch icon. By default, the <title> tag is used -->
+  <!-- iOS -->
+  <!-- If content is set to yes, the web application runs in full-screen mode hiding Safari User Interface Components -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- Sets the style of the status bar for a web application. Can be "default", "black" or "black-translucent" -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- Disables automatic detection of possible phone numbers in a webpage in Safari on iOS -->
+  <meta name="format-detection" content="telephone=no">
+  <!-- Specify a web application title for the launch icon. By default, the <title> tag is used -->
+  <meta name="apple-mobile-web-app-title" content="Air Strike">
 
-<!-- Windows -->
-<!--
-<meta name="msapplication-navbutton-color" content="red">
-<meta name="msapplication-TileColor" content="red">
-<meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
-<meta name="msapplication-config" content="browserconfig.xml">
--->
+  <!-- Windows -->
+  <!--
+  <meta name="msapplication-navbutton-color" content="red">
+  <meta name="msapplication-TileColor" content="red">
+  <meta name="msapplication-TileImage" content="Assets/icon/icon-72x72.png">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  -->
 
-<!-- Pinned Sites -->
-<!--
-<meta name="application-name" content="Air Strike">
-<meta name="msapplication-tooltip" content="Air Strike Tooltip Text">
-<meta name="msapplication-starturl" content="/">
--->
+  <!-- Pinned Sites -->
+  <!--
+  <meta name="application-name" content="Air Strike">
+  <meta name="msapplication-tooltip" content="Air Strike Tooltip Text">
+  <meta name="msapplication-starturl" content="/">
+  -->
 
-<!-- Tap highlighting -->
-<!--
-<meta name="msapplication-tap-highlight" content="no">
--->
+  <!-- Tap highlighting -->
+  <!--
+  <meta name="msapplication-tap-highlight" content="no">
+  -->
 
-<!-- Disable night mode for this page -->
-<!--
-<meta name="nightmode" content="disable">
--->
+  <!-- Disable night mode for this page -->
+  <!--
+  <meta name="nightmode" content="disable">
+  -->
 
-<!-- Layout mode -->
-<!--
-<meta name="layoutmode" content="fitscreen/standard">
--->
+  <!-- Layout mode -->
+  <!--
+  <meta name="layoutmode" content="fitscreen/standard">
+  -->
 
-<!-- imagemode - show image even in text only mode -->
-<!--
-<meta name="imagemode" content="force">
--->
+  <!-- imagemode - show image even in text only mode -->
+  <!--
+  <meta name="imagemode" content="force">
+  -->
 
-<!-- Orientation -->
-<!--
-<meta name="screen-orientation" content="landscape">
--->
-
-
-<!-- LINK TAGS -->
-
-<!-- Main Link Tags -->
-<link rel="icon" type="image/png" sizes="72x72" href="Assets/icon/icon-72x72.png">
-<!--
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-<link rel="icon" type="image/png" sizes="48x48" href="favicon-48.png">
--->
-
-<!-- iOS -->
-<link rel="apple-touch-icon" href="Assets/icon/icon-144x144.png">                               <!-- To specify multiple icons for different device resolutions -->
-<link rel="apple-touch-icon" sizes="144x144" href="Assets/icon/icon-144x144.png">
-<!--
-<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
--->
-
-<!-- Startup Image -->
-<link rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">                      <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
-<!--
-<link rel="apple-touch-startup-image" href="touch-icon-start-up-320x480.png">
--->
-
-<!-- Pinned Tab -->
-<!--
-<link rel="mask-icon" size="any" color="red" href="path/to/icon.svg" >
--->
-
-<!-- Android -->
-<!--
-<link rel="icon" sizes="192x192" href="icon-192x192.png">
-<link rel="icon" sizes="128x128" href="icon-128x128.png">
--->
-
-<!-- Others -->
-<!--
-<link rel="shortcut icon" type="image/x-icon" href="favicon.icon">
--->
+  <!-- Orientation -->
+  <!--
+  <meta name="screen-orientation" content="landscape">
+  -->
 
 
-<!-- Manifest.json -->
-<link rel="manifest" href="manifest.json">
+  <!-- LINK TAGS -->
 
-<!-- Manifest for iOS -->
-<html manifest="/manifest_iOS.manifest"></html>
+  <!-- Main Link Tags -->
+  <link rel="icon" type="image/png" sizes="72x72" rel="apple-touch-startup-image" href="Assets/icon/icon-72x72.png">
+  <!--
+  <link rel="icon" type="image/png" sizes="16x16" rel="apple-touch-startup-image" href="favicon-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" rel="apple-touch-startup-image" href="favicon-32.png">
+  <link rel="icon" type="image/png" sizes="48x48" rel="apple-touch-startup-image" href="favicon-48.png">
+  -->
 
-<!-- CSS Stylesheet -->
-<link rel="stylesheet" href="styles.css">
+  <!-- iOS -->
+  <!-- To specify multiple icons for different device resolutions -->
+  <link rel="apple-touch-icon" rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="144x144" rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">
+  <!--
+  <link rel="apple-touch-icon" sizes="76x76" rel="apple-touch-startup-image" href="touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120" rel="apple-touch-startup-image" href="touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" rel="apple-touch-startup-image" href="touch-icon-ipad-retina.png">
+  -->
 
-<!-- Other TAGSs -->
-<!--
-<meta http-equiv="cache-control" content="max-age=0" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-<meta http-equiv="pragma" content="no-cache" />
--->
+  <!-- Startup Image -->
+  <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" >
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" >
+  
+  <!--
+  <link rel="apple-touch-startup-image" rel="apple-touch-startup-image" href="touch-icon-start-up-320x480.png">
+  -->
+
+  <!-- Pinned Tab -->
+  <!--
+  <link rel="mask-icon" size="any" color="red" rel="apple-touch-startup-image" href="path/to/icon.svg" >
+  -->
+
+  <!-- Android -->
+  <!--
+  <link rel="icon" sizes="192x192" rel="apple-touch-startup-image" href="icon-192x192.png">
+  <link rel="icon" sizes="128x128" rel="apple-touch-startup-image" href="icon-128x128.png">
+  -->
+
+  <!-- Others -->
+  <!--
+  <link rel="shortcut icon" type="image/x-icon" rel="apple-touch-startup-image" href="favicon.icon">
+  -->
+
+
+  <!-- Manifest.json -->
+  <link rel="manifest" rel="apple-touch-startup-image" href="manifest.json">
+
+  <!-- Manifest for iOS -->
+  <!--  
+    <html manifest="/manifest_iOS.manifest">
+    </html>
+  -->
+  
+  <!-- CSS Stylesheet -->
+  <link rel="stylesheet" rel="apple-touch-startup-image" href="styles.css">
+
+  <!-- Other TAGSs -->
+  <!--
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
+  -->
 
 </head>
 
@@ -138,15 +154,10 @@
   <canvas id="Canvas_2"></canvas>
   <canvas id="Canvas_3"></canvas>
 
-<!-- p5.js CDN -->
-<!--
+  <!-- p5.js CDN -->
+  <!--
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
--->
-
-<!--
-  <script src="cacheupdate.js"></script>
--->
-
+  -->
 
   <script src="p5.js"></script>
   <script src="service-worker.js"></script>
