--- a/20170923-1 - Submarine Hunter/index.html
+++ b/20170923-1 - Submarine Hunter/index.html
@@ -49,7 +49,7 @@
 
   <!-- Startup Image -->
   <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
-  <link rel="apple-touch-startup-image" href="/Assets/icon/apple-icon.png">
+  <link rel="apple-touch-startup-image" href="Assets/icon/apple-icon.png">
 
   <!-- Manifest.json -->
   <link rel="manifest" href="manifest.json">
