--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -77,20 +77,20 @@
   <!-- LINK TAGS -->
 
   <!-- Main Link Tags -->
-  <link rel="icon" type="image/png" sizes="72x72" rel="apple-touch-startup-image" href="Assets/icon/icon-72x72.png">
+  <link rel="icon" type="image/png" sizes="72x72"  href="Assets/icon/icon-72x72.png">
   <!--
-  <link rel="icon" type="image/png" sizes="16x16" rel="apple-touch-startup-image" href="favicon-16.png">
-  <link rel="icon" type="image/png" sizes="32x32" rel="apple-touch-startup-image" href="favicon-32.png">
-  <link rel="icon" type="image/png" sizes="48x48" rel="apple-touch-startup-image" href="favicon-48.png">
+  <link rel="icon" type="image/png" sizes="16x16"  href="favicon-16.png">
+  <link rel="icon" type="image/png" sizes="32x32"  href="favicon-32.png">
+  <link rel="icon" type="image/png" sizes="48x48"  href="favicon-48.png">
   -->
 
   <!-- iOS -->
   <!-- To specify multiple icons for different device resolutions -->
-  <link rel="apple-touch-icon" sizes="144x144" rel="apple-touch-startup-image" href="Assets/icon/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="144x144"  href="Assets/icon/icon-144x144.png">
   <!--
-  <link rel="apple-touch-icon" sizes="76x76" rel="apple-touch-startup-image" href="touch-icon-ipad.png">
-  <link rel="apple-touch-icon" sizes="120x120" rel="apple-touch-startup-image" href="touch-icon-iphone-retina.png">
-  <link rel="apple-touch-icon" sizes="152x152" rel="apple-touch-startup-image" href="touch-icon-ipad-retina.png">
+  <link rel="apple-touch-icon" sizes="76x76"  href="touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120"  href="touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152"  href="touch-icon-ipad-retina.png">
   -->
 
   <!-- Startup Image -->
@@ -103,29 +103,25 @@
   <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)">
   <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)">
 
-  <!--
-  <link rel="apple-touch-startup-image" rel="apple-touch-startup-image" href="touch-icon-start-up-320x480.png">
-  -->
-
   <!-- Pinned Tab -->
   <!--
-  <link rel="mask-icon" size="any" color="red" rel="apple-touch-startup-image" href="path/to/icon.svg" >
+  <link rel="mask-icon" size="any" color="red"  href="path/to/icon.svg" >
   -->
 
   <!-- Android -->
   <!--
-  <link rel="icon" sizes="192x192" rel="apple-touch-startup-image" href="icon-192x192.png">
-  <link rel="icon" sizes="128x128" rel="apple-touch-startup-image" href="icon-128x128.png">
+  <link rel="icon" sizes="192x192" href="icon-192x192.png">
+  <link rel="icon" sizes="128x128" href="icon-128x128.png">
   -->
 
   <!-- Others -->
   <!--
-  <link rel="shortcut icon" type="image/x-icon" rel="apple-touch-startup-image" href="favicon.icon">
+  <link rel="shortcut icon" type="image/x-icon"  href="favicon.icon">
   -->
 
 
   <!-- Manifest.json -->
-  <link rel="manifest" rel="apple-touch-startup-image" href="manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <!-- Manifest for iOS -->
   <!--  
@@ -134,7 +130,7 @@
   -->
 
   <!-- CSS Stylesheet -->
-  <link rel="stylesheet" rel="apple-touch-startup-image" href="styles.css">
+  <link rel="stylesheet"  href="styles.css">
 
   <!-- Other TAGSs -->
   <!--
