--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -154,18 +154,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
   -->
 
-  <script src="/p5.js"></script>
-  <script src="/service-worker.js"></script>
-  <script src="/canvas.js"></script>
-  <script src="/utils.js"></script>
-  <script src="/vector.js"></script>
-  <script src="/eventlisteners.js"></script>
-  <script src="/image.js"></script>
-  <script src="/base.js"></script>
-  <script src="/holder.js"></script>
-  <script src="/cannonball.js"></script>
-  <script src="/target.js"></script>
-  <script src="/explosion.js"></script>
+  <script src="p5.js"></script>
+  <script src="service-worker.js"></script>
+  <script src="canvas.js"></script>
+  <script src="utils.js"></script>
+  <script src="vector.js"></script>
+  <script src="eventlisteners.js"></script>
+  <script src="image.js"></script>
+  <script src="base.js"></script>
+  <script src="holder.js"></script>
+  <script src="cannonball.js"></script>
+  <script src="target.js"></script>
+  <script src="explosion.js"></script>
 
   <!--
   ESCOLHER SE QUERO USAR p5.js OU NÃO
@@ -176,7 +176,7 @@
   <script src="script.js"></script>
   !-->
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 
 
 </body>
