--- a/20180415-1 - Air Strike/index.html
+++ b/20180415-1 - Air Strike/index.html
@@ -77,7 +77,7 @@
   <!-- LINK TAGS -->
 
   <!-- Main Link Tags -->
-  <link rel="icon" type="image/png" sizes="72x72"  href="/Assets/icon/icon-72x72.png">
+  <link rel="icon" type="image/png" sizes="72x72"  href="Assets/icon/icon-72x72.png">
   <!--
   <link rel="icon" type="image/png" sizes="16x16"  href="favicon-16.png">
   <link rel="icon" type="image/png" sizes="32x32"  href="favicon-32.png">
@@ -86,7 +86,7 @@
 
   <!-- iOS -->
   <!-- To specify multiple icons for different device resolutions -->
-  <link rel="apple-touch-icon" sizes="144x144"  href="/Assets/icon/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="144x144"  href="Assets/icon/icon-144x144.png">
   <!--
   <link rel="apple-touch-icon" sizes="76x76"  href="touch-icon-ipad.png">
   <link rel="apple-touch-icon" sizes="120x120"  href="touch-icon-iphone-retina.png">
@@ -95,13 +95,13 @@
 
   <!-- Startup Image -->
   <!-- Specify a launch screen image for iOS that is displayed while your web application launches -->
-  <link rel="apple-touch-startup-image" href="/Assets/icon/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)">
-  <link rel="apple-touch-startup-image" href="/Assets/icon/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)">
+  <link rel="apple-touch-startup-image" href="Assets/icon/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)">
 
   <!-- Pinned Tab -->
   <!--
@@ -121,7 +121,7 @@
 
 
   <!-- Manifest.json -->
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <!-- Manifest for iOS -->
   <!--  
@@ -130,7 +130,7 @@
   -->
 
   <!-- CSS Stylesheet -->
-  <link rel="stylesheet"  href="/styles.css">
+  <link rel="stylesheet"  href="styles.css">
 
   <!-- Other TAGSs -->
   <!--
