Update Base Page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
             class="project_box"
             onclick='
             window.open(
+            "http://wesfar.github.io/Projects/20200824-1 - NodeJS and Sockets/index.html",
+            "_blank",
+            "width="+window.innerWidth+",height="+window.innerHeight+""
+            );
+            '>
+            Socket.io<br>-</br>Multiplayer Experiment<br>-</br>(2020-08)
+            </a>
+
+            <a 
+            class="project_box"
+            onclick='
+            window.open(
             "http://wesfar.github.io/Projects/20180415-1 - Air Strike/index.html",
             "_blank",
             "width="+window.innerWidth+",height="+window.innerHeight+""
