--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             class="project_box"
             onclick='
             window.open(
-            "http://wesfar.github.io/Projects/20200824-1 - NodeJS and Sockets/index.html",
+            "http://wesfar.github.io/Projects/20200824-1 - NodeJS and Sockets/public/index.html",
             "_blank",
             "width="+window.innerWidth+",height="+window.innerHeight+""
             );
