--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             "width="+window.innerWidth+",height="+window.innerHeight+""
             );
             '>
-            Socket.io<br>-</br>Multiplayer Experiment<br>-</br>(2020-08)
+            Connected Balls<br>-</br>Multiplayer Experiment With Socket.io<br>-</br>(2020-08)
             </a>
 
             <a 
