Ajuste nome Fairy

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             class="project_box"
             href="http://wesfar.github.io/Projects/20170226-1 - Fadas Flores/index.html" 
             target="_self">
-            Fada Flores<br>-</br>A Fairy Hops On Clouds<br>-</br>(2017-02)
+            Flower Fairy<br>-</br>A Fairy Hops On Clouds<br>-</br>(2017-02)
             </a>
             
             <a 
