Window Opening Logic 2

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
             <a 
             class="project_box"
             href="http://wesfar.github.io/Projects/index.html" 
-            target="_blank">
+            target="_self">
             Portfolio Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
             <a 
             class="project_box"
             href="http://wesfar.github.io/Projects/20170803-1 - HTML CSS Isaac Newton Tribute Page/index.html"
-            target="_blank">
+            target="_self">
             Tribute Page<br>-</br>FreeCodeCamp Project<br>-</br>(2017-08)
             </a>
 
@@ -167,49 +167,49 @@
             <a 
             class="project_box"
             href="http://www.freecodecamp.com"
-            target="_blank">
+            target="_self">
             FreeCodeCamp
             </a>
             
             <a 
             class="project_box"
             href="http://www.khanacademy.com"
-            target="_blank">
+            target="_self">
             Kahn Academy
             </a>
 
             <a 
             class="project_box"
             href="https://www.codecademy.com"
-            target="_blank">
+            target="_self">
             Code Academy
             </a>
             
             <a 
             class="project_box"
             href="http://thecodingtrain.com/"
-            target="_blank">
+            target="_self">
             Coding Train
             </a>
 
             <a 
             class="project_box"
             href="https://www.youtube.com/user/codingmath"
-            target="_blank">
+            target="_self">
             Coding Math
             </a>
 
             <a 
             class="project_box"
             href="http://www.traversymedia.com/"
-            target="_blank">
+            target="_self">
             Traversy Media
             </a>
 
             <a 
             class="project_box"
             href="https://www.thenetninja.co.uk/"
-            target="_blank">
+            target="_self">
             The Net Ninja
             </a>
 
