Adding Nature Simulation

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                       
             <a 
             class="project_box"
+            href="http://wesfar.github.io/Projects/20210402-1 - Nature Simulation/index.html"
+            target="_self">
+            Nature Simulation (Desktop)<br>-</br>Multiple Creatures Strive to Survive<br>-</br>(2021-04)
+            </a>
+
+            <a 
+            class="project_box"
             href="https://immense-garden-57320.herokuapp.com/"
             target="_self">
             Realtime Multiplayer Shooter Balls (Mobile)<br>-</br>Another Socket.io Experiment<br>-</br>(2020-09)
