Highlight Nonfunctioning Link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="sub_projects_projects">
                       
             <a 
-            class="project_box"
+            class="project_box_red"
             href="https://immense-garden-57320.herokuapp.com/"
             target="_self">
             Realtime Multiplayer Shooter Balls (Mobile)<br>-</br>Another Socket.io Experiment<br>-</br>(2020-09)
