--- a/20210402-1 - Nature Simulation/index.html
+++ b/20210402-1 - Nature Simulation/index.html
@@ -17,7 +17,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+    <script src="../p5/p5.js"></script>
     <script src="hunter.js"></script>
     <script src="food.js"></script>
     <script src="sliders.js"></script>
