--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
           <div class="sub_projects_projects">
                       
             <a 
+            class="project_box"
+            href="http://wesfar.github.io/Projects/20210402-1 - Nature Simulation/index.html"
+            target="_self">
+            Nature Simulation (Desktop)<br>-</br>Simulated Creatures Struggling to Survive<br>-</br>(2021-04)
+            </a>
+
+            <a 
             class="project_box_red"
             href="https://immense-garden-57320.herokuapp.com/"
             target="_self">
