--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
 
             <a 
-            class="project_box"
+            class="project_box_red"
             href="https://pure-badlands-23259.herokuapp.com/"
             target="_self">
             Realtime Multiplayer Draw Balls (Mobile)<br>-</br>Multiplayer Experiment With Socket.io<br>-</br>(2020-08)
@@ -113,7 +113,7 @@
             </a>
             
             <a 
-            class="project_box"
+            class="project_box_red"
             href="http://wesfar.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
             target="_self">
             ISS Locator (Mobile)<br>-</br>Locates ISS Live<br>-</br>(2016-12)
