Changed ISS Locator color

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </a>
             
             <a 
-            class="project_box_red"
+            class="project_box"
             href="http://wesfar.github.io/Projects/20161202-1 - Google Maps ISS Coordinates/index.html" 
             target="_self">
             ISS Locator (Mobile)<br>-</br>Locates ISS Live<br>-</br>(2016-12)
