Fixed ISS Locator

--- a/20161202-1 - Google Maps ISS Coordinates/index.html
+++ b/20161202-1 - Google Maps ISS Coordinates/index.html
@@ -25,10 +25,9 @@
 
 <div id="map"></div>
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfN4zINoEwbpmp6sHCW73hFBCD3KK86sQ&callback=initMap" async defer></script>
 <script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="script.js"></script>
-
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfN4zINoEwbpmp6sHCW73hFBCD3KK86sQ&callback=init_Map"></script>
 
 </body>
 </html>
